Merge branches 'AutoCommandFinder' and 'master' of https://github.com/NathanHergenreter/GasStationChain into AutoCommandFinder
 Conflicts:
	src/main/java/gasChain/application/UserApplication.java
	src/main/java/gasChain/application/controller/CashierController.java
	src/main/java/gasChain/application/controller/CorporateController.java
	src/main/java/gasChain/application/controller/ManagerController.java
	src/main/java/gasChain/application/manager/CorporateHelper.java
	src/main/java/gasChain/application/manager/ManagerHelper.java
	src/main/java/gasChain/application/manager/interfaces/ICashierHelper.java
	src/main/java/gasChain/application/manager/interfaces/ICorporateHelper.java
	src/main/java/gasChain/application/manager/interfaces/IManagerHelper.java
	src/main/java/gasChain/entity/Sale.java
	src/main/java/gasChain/generator/GasStationGenerator.java
	src/main/java/gasChain/managers/CashierHelper.java